[project]
name = "dalle-integration"
description = "DalleImageNodes is a custom extension for ComfyUI that integrates OpenAI's DALL·E 3 API for: Image generation, Inpainting (image editing), Image variation.\nThis project supports the latest OpenAI Python SDK (v1.x) and automatically handles image resizing and format requirements (RGBA, fixed sizes) based on the examples from the offical Dall-E website."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/cleanlii/comfyui-dalle-integration"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-dalle-integration"
Icon = ""
